# DreamForge

./: .gitignore  CONTRIBUTING.md  DreamForge.command  README.md  dreamforge-arabic-poster.bat  dreamforge-cli.bat  dreamforge-fetch-qwen-clip-smoke.bat  dreamforge-mcp.bat  dreamforge-ui-anime.bat  dreamforge-ui-embed.bat  dreamforge-ui-realistic.bat  dreamforge-ui.bat  dreamforge.bat  dreamforge.sh  dreamforge_cli_direct.py  setup.bat  setup.sh  stop-dreamforge.bat  verify.bat
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
backend/: .gitignore  _paths.py  arabic_poster_pipeline.py  arabic_text_renderer.py  argparser.py  config.txt  config_modification_tutorial.txt  dreamforge-arabic-poster.ps1  dreamforge-cli.ps1  dreamforge_agent_runtime.py  dreamforge_agent_tools.py  dreamforge_app_config.py  dreamforge_arabic_composite.py  dreamforge_brain.py  dreamforge_cli_direct.py  dreamforge_cli_inventory.py  dreamforge_comfy_client.py  dreamforge_comfy_memory.py  dreamforge_comfy_models.py  dreamforge_comfy_server.py  dreamforge_comfy_workflow_import.py  dreamforge_comfy_workflows.py  dreamforge_comfy_ws.py  dreamforge_companion_download.py  dreamforge_desktop_bridge.py  dreamforge_desktop_worker.py  dreamforge_dynamic_presets.py  dreamforge_edit_lineage.py  dreamforge_engine.py  dreamforge_errors.py  dreamforge_generation.py  dreamforge_identity_registry.py  dreamforge_inpaint_selection.py  dreamforge_krita_recipes.py  (+31 more)
(+179 files in other folders)
