[package]
name = "dreamforge"
version = "0.1.0"
description = "DreamForge — AI image creation studio"
authors = ["DreamForge"]
edition = "2021"

[lib]
name = "dreamforge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "process", "io-util", "macros", "rt-multi-thread"] }
notify = "6"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
futures-util = "0.3.32"
reqwest = { version = "0.13.3", features = ["stream", "rustls"] }
rfd = "0.15"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
